fixes for gh-pages + mocks

--- a/Consalting_Frontend/index.html
+++ b/Consalting_Frontend/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.jpeg" />
+    <!-- Указываем базовый путь для favicon -->
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Consalting Frontend</title>
+    <!-- Указываем базовый путь для manifest -->
     <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
     <div id="root"></div>
+    <!-- Указываем базовый путь для main.tsx -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
